# ici-files

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: animated.rs  changing.rs  color.rs  conversion.rs  errors.rs  file.rs  image.rs  jasc_palette.rs  lib.rs  palette.rs  scaling.rs  wrapper.rs
