[package]
name = "ici-files"
version = "0.2.4"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Encode/decode ici files"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/ici-files"
readme = "README.md"
keywords = ["graphics", "gamedev", "simple"]
categories = ["graphics", "game-development"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"], optional = true }